gitea/k8s/gitea-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-db
  labels:
    app: gitea-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-db
  template:
    metadata:
      labels:
        app: gitea-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 3306
