gitea/k8s/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
    - port: 80
      targetPort: 3000  
  selector:
    app: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-db
spec:
  ports:
    - port: 3306
      targetPort: 3306  
  selector:
    app: gitea-db
